tests/snapshots/render_snapshots__overlays__help_overlay.snap
---
source: tests/render_snapshots.rs
expression: output
---
test_project | - | - | no dsn | localhost:5432/test                             
┌ [1] Explorer ────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                 
│> public.us╭ Help ────────────────────────────────────────────────╮───────────┐
│  public.po│▸ Global Keys                                        ▲│           │
│  public.co│  q                   Quit application               ┃│           │
│           │  ?                   Toggle help                    ┃│           │
│           │  Ctrl+P              Open Table Picker              ││           │
│           │  Ctrl+K              Open Command Palette           ││           │
│           │  :                   Enter command line             ││           │
│           │  f                   Toggle Focus                   ││           │
│           │  1/2/3               Switch pane focus              ││           │
│           │  Tab/⇧Tab            Inspector prev/next tab        ││───────────┘
│           │  r                   Reload metadata                ││───────────┐
│           │  s                   Open SQL Editor                ││           │
│           │  e                   Open ER Diagram                ││           │
│           │  c                   Open Connection Selector       ││           │
│           │  Ctrl+E              Export result to CSV           ││           │
│           │  Ctrl+R              Toggle Read-Only               ││           │
│           │                                                     ││           │
│           │▸ Navigation                                         ▼│           │
│           │  j / ↓               Move down / scroll      row   0%│           │
└───────────╰ j/k / ↑↓ to scroll, ? or Esc to close ───────────────╯───────────┘
j/k / ↑↓:Scroll  ?/Esc:Close
