tests/snapshots/render_snapshots__overlays__query_history_picker_empty.snap
---
source: tests/render_snapshots.rs
expression: output
---
test_project | - | - | no dsn | localhost:5432/test                             
┌ [1] Explorer ────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                 
│ Press 'r' to load│┌ [2] Inspector ───────────────────────────────────────────┐
│                  ││(select a table)                                          │
│           ╭ Query History ───────────────────────────────────────╮           │
│           │  > █                                                 │           │
│           │  No history yet                                      │           │
│           │                                                      │           │
│           │                                                      │           │
│           │                                                      │           │
│           │                                                      │           │
│           │                                                      │───────────┘
│           │                                                      │───────────┐
│           │                                                      │           │
│           │                                                      │           │
│           │                                                      │           │
│           │                                                      │           │
│           │                                                      │           │
│           │                                                      │           │
│           ╰ 0 entries │ ↑↓ Navigate │ Enter Select ──────────────╯           │
│                  ││                                                          │
└──────────────────┘└──────────────────────────────────────────────────────────┘
Enter:Select  type:Filter  ↑↓:Navigate  Esc:Close
