tests/snapshots/render_snapshots__overlays__sql_modal_confirming_high_unmatched.snap
---
source: tests/render_snapshots.rs
expression: output
---
test_project | - | - | no dsn | localhost:5432/test                             
┌ [1] Explorer ────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                 
│ Press 'r' to load│┌ [2] Inspector ───────────────────────────────────────────┐
│                  ││(select a table)                                          │
│                  ││                                                          │
│       ╭ SQL ── ⚠ HIGH ───────────────────────────────────────────────╮       │
│       │DROP TABLE users                                              │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │───────┘
│       │                                                              │───────┐
│       │                                                              │       │
│       │                                                              │       │
│       │⚠ HIGH RISK  DROP                              Enter blocked  │       │
│       │Confirm "users": > use█                                       │       │
│       │                                                              │       │
│       ╰ Esc: Back ───────────────────────────────────────────────────╯       │
│                  ││                                                          │
│                  ││                                                          │
└──────────────────┘└──────────────────────────────────────────────────────────┘
Esc:Back
