tests/snapshots/render_snapshots__overlays__sql_modal_confirming_medium.snap
---
source: tests/render_snapshots.rs
expression: output
---
test_project | - | - | no dsn | localhost:5432/test                             
┌ [1] Explorer ────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                 
│ Press 'r' to load│┌ [2] Inspector ───────────────────────────────────────────┐
│                  ││(select a table)                                          │
│                  ││                                                          │
│       ╭ SQL ── ⚠ MEDIUM ─────────────────────────────────────────────╮       │
│       │DELETE FROM users WHERE id = 1                                │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │───────┘
│       │                                                              │───────┐
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │       │
│       │ [CONFIRM]                              ⚠ MEDIUM RISK  DELETE │       │
│       ╰ Enter: Execute │ Esc: Back ──────────────────────────────────╯       │
│                  ││                                                          │
│                  ││                                                          │
└──────────────────┘└──────────────────────────────────────────────────────────┘
Enter:Execute  Esc:Back
