tests/snapshots/render_snapshots__overlays__sql_modal_cursor_at_middle.snap
---
source: tests/render_snapshots.rs
expression: output
---
test_project | - | - | no dsn | localhost:5432/test                             
┌ [1] Explorer ────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                 
│ Press 'r' to load│┌ [2] Inspector ───────────────────────────────────────────┐
│                  ││(select a table)                                          │
│                  ││                                                          │
│       ╭ SQL Editor ──────────────────────────────────────────────────╮       │
│       │SELECT 1                                                      │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │───────┘
│       │                                                              │───────┐
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │       │
│       │ [INSERT]                                               Ready │       │
│       ╰ ⌥Enter: Run │ Ctrl+L: Clear │ Ctrl+O: History │ Esc: Normal ─╯       │
│                  ││                                                          │
│                  ││                                                          │
└──────────────────┘└──────────────────────────────────────────────────────────┘
⌥Enter:Run  ↑↓←→:Move  Esc:Normal
